arrow icon, fixed cases filter spacing

--- a/themes/caci/src/css/main.less
+++ b/themes/caci/src/css/main.less
@@ -606,7 +606,7 @@ input[type="submit"] {
         margin: 23px 20px 20px 0;
         padding: 0;
         border-color: transparent;
-        color: #999999;
+        color: #F5F5F5;
     }
     .results-count{
         background-color: #320303; 
@@ -707,9 +707,9 @@ input[type="submit"] {
                     }
                     .icon {
                         font-size: 1.375em !important;
-                        margin-right: 12px;
-
+                        margin-right: 13px;
                     }
+                 
                     p.location-info {
                         margin: 8px 0;
                         span:first-child {
@@ -717,8 +717,12 @@ input[type="submit"] {
                         }
                         span {
                             display: inline-block;
-                            margin-right: 5px;
                             font-size: 1em;
+                        }
+                        a{
+                            span{
+                                margin-right: 5px;
+                            }
                         }
                         .mun {
                             opacity: 0.7;
@@ -980,7 +984,7 @@ input[type="submit"] {
         margin-right: 10px;
         font-family: 'Open Sans', sans-serif;
         .icon {
-            margin-right: 5px;
+            margin-right: 8px;
         }
         p {
             margin: 0;
